Bundle Windows app runtimes